--- a/assets/css/style.bkup.css
+++ b/assets/css/style.bkup.css
@@ -1,4 +1,32 @@
 
+.gotham {
+  font-family: 'Gotham', sans-serif;
+}
+
+.gotham-bold {
+  font-family: 'Gotham Bold', sans-serif;
+  font-weight: 700;
+}
+
+.gotham-black {
+  font-family: 'Gotham Black', sans-serif;
+}
+
+.gotham-lite{
+  font-family: 'Gotham Light', sans-serif;
+}
+
+.gotham-thin {
+  font-family: 'Gotham Thin', sans-serif;
+}
+
+.gotham-xlite {
+  font-family: 'Gotham XLight', sans-serif;
+}
+
+.gotham-xlite {
+  font-family: 'Gotham XLight', sans-serif;
+}
 
 *, html, body {
   font-family: 'gotham medium', sans-serif;
@@ -11,21 +39,6 @@
 body {
   overflow-x: hidden;
   scroll-behavior: smooth;
-}
-
-.leaflet-popup-content-wrapper, .leaflet-popup-tip {
-  width: 571px;
-  background: none;
-  box-shadow: none;
-}
-
-.leaflet-container a.leaflet-popup-close-button {
-  top: 30px;
-}
-
-.leaflet-fade-anim .leaflet-map-pane .leaflet-popup {
-  margin-bottom: -16px;
-  margin-left: -21px;
 }
 
 img.logo {
@@ -200,7 +213,7 @@ font-family: 'Gotham', sans-serif;
 }
 
 .divisor {
-  height: 150px;
+  height: 80px;
   width: 100%;
   background-color: #233a6e;
   display: flex;
@@ -245,22 +258,30 @@ main {
 
 article {
   border-radius: 10px;
+  padding: 20px;
   color: #fff;
   border: 1px solid #ccc7c3;
   background-color: #fff;
   text-align: center;
-  transition: 300ms;
 }
 
-article:hover {
-  cursor: pointer;
-  transform: scale(1.03) translateY(-10px);
-  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+.product-name {
+  font-family: 'Gotham Bold', sans-serif;
+  font-weight: 700;
+  color: #222;
+  text-transform: uppercase;
+  margin-bottom: 0;
+}
+
+.product-type {
+  font-family: 'Gotham Light', sans-serif;
+  color: #222;
+  margin-bottom: 0;
 }
 
 .product img {
   max-width: 100%;
-  border-radius: 10px;
+  width: 250px;
 }
 
 .product-link {
@@ -273,7 +294,7 @@ article:hover {
   padding: 6px 16px;
 }
 
-#map { height: 700px; }
+#map { height: 500px; }
 
 .map-wraper {
   position: relative;
@@ -290,8 +311,8 @@ article:hover {
 }
 
 .fale-conosco{
-  padding-top: 90px;
-  padding-bottom: 80px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   background-image: url(../../assets/img/trigo-contato.png);
   background-position: right bottom;
   background-color: #f3f4f9;
@@ -316,9 +337,9 @@ article:hover {
 
 .fale-conosco input, .fale-conosco textarea {
   width: 100%;
-  border: 1px solid #233a6e;
+  border: 1px solid #96969e;
   border-radius: 3px;
-  height: 40px;
+  height: 30px;
   background-color: #f3f4f8;
   margin-top: 15px;
   padding-left: 10px;
@@ -327,7 +348,7 @@ article:hover {
 }
 
 .fale-conosco textarea {
-  height: 230px;
+  height: 120px;
 }
 
 .fale-conosco button {
@@ -339,17 +360,9 @@ article:hover {
 }
 
 footer {
-  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
-
-footer img {
-  max-width: 100%;
-}
-
-.center {
-  text-align: center;
-}
-
 
 .enderecos {
   display: flex;
@@ -398,10 +411,6 @@ footer img {
   overflow-y: auto;
   position: relative;
   display: none;
-}
-
-.produto-modal img {
-  max-width: 100%;
 }
 
 .prod-col {
@@ -472,14 +481,6 @@ footer img {
   max-width: 100%;
 }
 
-.bg-verde {
-  background-image: url(../img/banner-verde.png);
-  background-position: top left;
-  background-repeat: no-repeat;
-  background-size: 100%;
-  padding-top: 1.5vw;
-}
-
 .modal-fechar {
   background-color: #233972;
   color: #fff;
@@ -495,54 +496,11 @@ footer img {
   transition: 300ms;
 }
 
-.relative {
-  position: relative;
-}
-
 .modal-fechar:hover {
   transform: scale(1.1);
 }
 
-.prato-1 {
-  position: absolute;
-  left: -50px;
-  top: 0;
-}
-
-.prato-2 {
-  width: 1245px;
-  height: 824px;
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-}
-
-
-.prato2bg {
-  position: absolute;
-  bottom: 52px;
-  right: -23%;
-}
-
-@media only screen and (max-width: 1245px) {
-  .prato-2 {
-    width: auto;
-    height: auto;
-  }
-}
-
-
-@media only screen and (max-width: 1800px) {
-  .prato-1 {
-    display: none;
-  }
-}
-
-
 @media only screen and (max-width: 800px) {
-  .prato2bg {
-    display: none;
-  }
   .enderecos {
     flex-direction: column;
   }
@@ -552,38 +510,7 @@ footer img {
   br {
     display: none;
   }
-
-  #selo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 999;
-    top: 91%;
-    transform: translateY(-50%);
-    left: 15px;
-    width: 100px;
-  }
 }
-
-@media only screen and (max-width: 800px) {
-  .leaflet-fade-anim .leaflet-map-pane .leaflet-popup {
-    margin-bottom: 0px;
-    margin-left: 0;
-}
-  .leaflet-popup-content-wrapper, .leaflet-popup-tip {
-    width: 300px;
-  }
-  .leaflet-popup-content-wrapper img {
-    max-width: 100%;
-  }
-  .leaflet-container a.leaflet-popup-close-button {
-    top: 20px;
-    right: 23px;
-  }
-}
-
-
-
 
 @media only screen and (max-width: 1010px) {
   .cards-container {
@@ -602,12 +529,6 @@ footer img {
 }
 
 @media only screen and (max-width: 1200px) {
-  .menu-wraper {
-    padding-left: 0;
-  }
-  nav {
-    display: none;
-  }
   .spoon {
     display: none;
   }
@@ -615,9 +536,12 @@ footer img {
     display: none;
   }
   .produto-modal {
-    width: 90%;
+    flex-direction: column;
   }
-  main {
-    grid-template-columns: repeat(auto-fill, minmax(47%, 1fr));
+  .prod-col {
+    width: 100%;
+  }
+  .produto-modal {
+    width: 90%;
   }
 }
