ajustando feedback do form de contato

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,13 @@ img.logo {
   text-decoration: none;
 }
 
+#form-feedback {
+  display: block !important;
+  width: auto;
+}
+
+
+
 
 .menu-wraper ul li a img {
   transition: 300ms;
